tests/comp/sem/valid/usage_of_args_as_field.mj
class A {
  public static void main(String[] args) {
    A a = new A();
    a.args = 10;
  }

  public int args;
}
