tests/comp/sem/invalid/compare_reference_types.mj
class B { }

class A {
  public static void main(String[] args) {
    new B() == new A();
    new B() != new A();
  }
}